[package]
name = "dml"
version = "0.1.1"
authors = ["Samuel Dolt <samuel@dolt.ch>"]

[dependencies]
regex = "*"
docopt = "0.6"
rustc-serialize = "0.3"
log = "0.3"
env_logger = "0.3"
subcmd = { git = "https://github.com/samdolt/subcmd-rs.git" }
handlebars = "0.12"

[lib]
name = "dml"
path = "src/lib.rs"

[[bin]]
name = "dml"
path = "src/main.rs"
doc = false
